--- a/templates/tables/reserved_tables.html
+++ b/templates/tables/reserved_tables.html
@@ -1,35 +1,44 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Reserved Table</title>
+    <link rel="stylesheet" href="{% static "css/main_layout.css" %}"> 
     <link rel="stylesheet" type="text/css" href="{% static "css/reserved_tables.css" %}">
-</head>
-<body class="reserved-tables-body">
-    <div class="reserved-tables-content">
+  </head>
+  <body class="reserved-tables-body">
+    {% include "layouts/header.html" %}
+    <main>
+      <div class="reserved-tables-content">
         <div class="reserved-tables-info">
-            <h1 class="reserved-tables-title">Reserved Table</h1>
-            <h2 class="table-number">Table №{{ table.table_number }}</h2>
-            <img src="{{table.photo.url}}" alt="" class="recerved_table-image" />
-            <p class="recerved_table-price"></p>
-            {% if reserved_tables %}
-            <ul class="reservation-list">
-                    {% for reserved_table in reserved_tables %}
-                        <li class="reservation-item">
-                            Recervation №{{ reserved_table.id }} - {{ reserved_table.data }} - {{ reserved_table.duration }}
-                        </li>
-                        {% endfor %}
-                    </ul>
-                    {% else %}
-                    <p class="no-reservation">
-                        On the specified date there is no armor for the table №{{ table.table_number }}
-                    </p>
-                    {% endif %}
-                </div>
-        <form action="" method="post" class="recerved-table">
-            <h2 class="table-number"> Price{{ table.price }}</h2>
-            <button type="submit">Pay it</button>
-        </form>
-    </div>
-</body>
+          <h2 class="table-number">Table №{{ table.table_number }}</h2>
+          <img src="{{table.photo.url}}" alt="" class="recerved_table-image" />
+          <p class="recerved_table-price"></p>
+          {% if reserved_tables %}
+          <ul class="reservation-list">
+            {% for reserved_table in reserved_tables %}
+            <li class="reservation-item">
+              Recervation №{{ reserved_table.id }} - {{ reserved_table.data }} -
+              {{ reserved_table.duration }}
+            </li>
+            {% endfor %}
+          </ul>
+          {% else %}
+          <p class="no-reservation">
+            On the specified date there is no armor for the table №{{
+            table.table_number }}
+          </p>
+          {% endif %}
+        </div>
+      </div>
+      <form action="" method="post" class="recerved-table">
+        <h2 class="table-number">Price{{ table.price }}</h2>
+        <h2 class="table-number">Duration 2 hour</h2>
+        <h2 class="table-number">Date</h2>
+        <input type="datetime-local" name="data" class="input" required>
+        <a href="{% url 'stripe' table.price|floatformat:0 user.email %}">Pay it</a>
+      </form>
+    </main>
+    {% include "layouts/footer.html" %}
+  </body>
 </html>
