--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,7 +1,7 @@
 {% load %}
 <footer class="main_page-footer">
   <div class="social-icons">
-    <a href="https://www.instagram.com/cafe_future_/" class="social-icon"
+    <a href="https://www.facebook.com/profile.php?id=61554641284675" class="social-icon"
       ><img
         src="http://127.0.0.1:8000/static/images/icons8-facebook.svg"
         alt="Facebook"
@@ -12,7 +12,7 @@
         alt="Twitter"
     /></a>
     <a
-      href="https://www.facebook.com/profile.php?id=61554641284675"
+      href="https://www.instagram.com/cafe_future_/"
       class="social-icon"
       ><img
         src="http://127.0.0.1:8000/static/images/icons8-instagram.svg"
